fixed: green bar aligned to inside of grey box #56

--- a/app/renderer/src/assets/sass/new.scss
+++ b/app/renderer/src/assets/sass/new.scss
@@ -418,7 +418,7 @@ aside#step-list {
     align-items: center;
     div.instrument {
         border-left: 5px solid $secondary-brand;
-        width: 140px;
+        width: 135px;
         &:first-child {
             margin-bottom: $baseline;
         }
